--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="#sucursales">Sucursales</a>
             <a href="#facturas">Facturas</a>
             <a href="#productos">Productos</a>
-            <a href="contactanos">Contactanos</a>
+            <a href="#contactanos">Contactanos</a>
             <a href="#facturas" id="boton-header-pagar" >Paga acá</a>
         </div>
     </header>
@@ -110,10 +110,10 @@
         <h3>Aprendé más sobre nuestros productos</h3>
         <div class="contenedor-videos">
             <div class="video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/4GYbDRUUcPY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="460" height="315" src="https://www.youtube.com/embed/4GYbDRUUcPY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/zk8rE0kmHew" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>        
+                <iframe width="460" height="315" src="https://www.youtube.com/embed/zk8rE0kmHew" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>        
             </div>
         </div>
         <div class="videos-youtube">
@@ -132,7 +132,7 @@
         -- el archivo en el xampp/htdocs es una copia,
         si actualizo algo tengo q copiar y pegar devuelta
     -->
-    <form action="procesar.php" method="post" id="contactanos">
+    <form id="contactanos" action="procesar.php" method="post" >
         <h3>¡Dejanos tu comentario!</h3>
         <label for="nombre">Nombre*</label>
         <input type="text" name="nombre" id="nombre" required>
