agregue boton hamburguesa con js

--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
             <a href="#contactanos">Contactanos</a>
             <a href="#facturas" id="boton-header-pagar" >Paga acá</a>
         </div>
+        <div class="menu-burger">
+            <a href="#sucursales">Sucursales</a>
+            <a href="#facturas">Facturas</a>
+            <a href="#productos">Productos</a>
+            <a href="#contactanos">Contactanos</a>
+            <a href="#facturas" id="boton-pagar-burger" >Paga acá</a>
+        </div>
+        <button class="burger">
+            <i class="fas fa-solid fa-bars"></i>
+        </button>
     </header>
 
     <!-- section carrusel -->
@@ -216,6 +226,6 @@
         get transfiere datos y se ven
         post transfiere datos y no se ven
     -->
-
+    <script src="./index.js"></script>
 </body>
 </html>
