--- a/facturas/factura-digital.html
+++ b/facturas/factura-digital.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Facturacion Digital - WebFacturacionDigital</title>
-    <link rel="stylesheet" href="factura-digital.css">
+    <link rel="stylesheet" href="./factura-digital.css">
     <link rel="shortcut icon" href="https://cdn-icons.flaticon.com/png/512/2543/premium/2543344.png?token=exp=1656031152~hmac=88f93cedaa5f0d9d678f122c81ed5f04" type="image/x-icon">
     <script src="https://kit.fontawesome.com/35cd8eb970.js" crossorigin="anonymous"></script>
 
