arregle boton hamburguesa

--- a/facturas/factura-digital.html
+++ b/facturas/factura-digital.html
@@ -26,7 +26,7 @@
         <p>¡ERROR!</p>
         <p>La base de datos aun no fue creada :(</p>
         <button class="cerrar-modal">
-            CERRAR      
+            cerrar
         </button>
     </div>
     <script src="./factura-digital.js"></script>
