--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Plus Pagos | Solucion rápida, simple y segura</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="favicon.ico" />
-    <link rel="icon" href="./plus pagos icon.jpeg" sizes="32x32" type="image/png">
+    <link rel="icon" href="./plus-pagos.jpeg" sizes="32x32" type="image/png">
     <script src="https://kit.fontawesome.com/35cd8eb970.js" crossorigin="anonymous"></script>
 </head>
 <body>
