--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
         <h2>¡Ingresa a tu cuenta!</h2>
         <div class="ingresar-datos">
             <label for="usuario">Usuario</label>
-            <input type="text">
+            <input type="text" id="usuario">
             <label for="clave">Clave</label>
-            <input type="password">
-            <button class="ingresar">Ingresar</button>
+            <input type="password" id="clave">
         </div>
+        <button class="ingresar">Ingresar</button>
     </section>
     
     <!-- section descargar facturas -->
