--- a/index.html
+++ b/index.html
@@ -88,15 +88,15 @@
     <section class="seccion-cuenta" id="ingresar">
         <h2 id="anuncio">¡Ingresa a tu cuenta!</h2>
         <!-- cuenta a ingresar -->
-        <div class="ingresar-cuenta">
+        <form class="ingresar-cuenta">
             <div class="ingresar-datos">
                 <label for="usuario" >Usuario</label>
                 <input type="text" id="usuario">
                 <label for="clave">Clave</label>
                 <input type="password" id="clave">
             </div>
-            <button class="ingresar">Ingresar</button>
-        </div>
+            <button type="button" class="ingresar">Ingresar</button>
+        </form>
         <!-- cuenta ingresada -->
         <div class="cuenta-ingresada"></div>    
     </section>
